--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbyXPxxZujB9YOSUnWf5u-biHio9R47Wvog5s8ffZBi2YzQ0nejBPkQzyezllqKq-ej5sg/exec";
+    const AS_URL_BASE = "https://script.google.com/a/~/macros/s/AKfycbyXPxxZujB9YOSUnWf5u-biHio9R47Wvog5s8ffZBi2YzQ0nejBPkQzyezllqKq-ej5sg/exec";
                         
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
