--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   <script>
-    const AS_URL_BASE = "https://script.google.com/macros/s/AKfycbza9diU1lSa7ghxEp7fmHMYbOxYhiVp9FxrbwjVDMf7iUcBqF5egsz1scB5oeeRFaOSlw/exec";
+    const AS_URL_BASE = "https://script.google.com/a/~/macros/s/AKfycbza9diU1lSa7ghxEp7fmHMYbOxYhiVp9FxrbwjVDMf7iUcBqF5egsz1scB5oeeRFaOSlw/exec";
                         
     var url = document.location.href;
     var k = url.substr(url.lastIndexOf("k=")+2);
